[package]
authors = ["Damien Martin-Guillerez <dmarting@google.com>", "Stepan Koltsov <stepan.koltsov@gmail.com>", "Facebook", "Alex Choi"]
build = "build.rs"
categories = ["parser-implementations", "development-tools"]
description = "An implementation of the Starlark language in Rust with extended syntax (match/case, structs, generators)."
documentation = "https://docs.rs/blueprint-starlark"
edition = "2021"
keywords = ["starlark", "skylark", "bazel", "language", "interpreter"]
license = { workspace = true }
name = "blueprint-starlark"
repository = { workspace = true }
version = "0.13.1"

[dependencies]
anyhow = "1.0.65"
bumpalo = "3.8"
debugserver-types = "0.5.0"
derivative = "2.2"
derive_more.workspace = true
blueprint-display-container = { workspace = true }
blueprint-dupe = { workspace = true }
either = "1.8"
erased-serde = "0.3.12"
hashbrown = { version = "0.14.3", features = ["raw"] }
inventory = "0.3.8"
itertools = "0.13.0"
maplit = "1.0.2"
memoffset = "0.6.4"
num-bigint = "0.4.3"
num-traits = "0.2"
once_cell = "1.8"
paste = "1.0"
ref-cast = "1.0.18"
regex = "1.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
blueprint-starlark-derive = { version = "0.13.0", path = "../starlark_derive" }
blueprint-starlark-map = { version = "0.13.0", path = "../starlark_map" }
blueprint-starlark-syntax = { version = "0.13.2", path = "../starlark_syntax" }
static_assertions = "1.1.0"
strsim = "0.10.0"
textwrap = "0.11"
thiserror = "1.0.36"

blueprint-allocative = { workspace = true, features = ["bumpalo", "num-bigint"] }
blueprint-cmp-any = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustyline = "14.0"

[dev-dependencies]
rand = { version = "0.8.4", features = ["small_rng"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(rust_nightly)"] }
