[package]
authors = ["Meta", "Alex Choi"]
description = "Implementation of derive(Allocative) for blueprint-allocative crate"
documentation = "https://docs.rs/blueprint-allocative-derive"
edition = "2021"
license = { workspace = true }
name = "blueprint-allocative-derive"
repository = { workspace = true }
version = "0.3.3"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
